prevent sticky navigation from jumping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,11 @@ body {
 	margin-bottom: 10px;
 }
 
+#sticky_navigation_wrapper {
+	width:100%;
+	height:50px;
+}
+
 #sticky_navigation { 
 	width:100%; 
 	height:50px; 
